--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -116,6 +116,7 @@
     <string name="cus_w_block">BlockWrite</string>
     <string name="cus_write">writeIn</string>
 
+
     <string name="query">Query</string>
     <string name="config">Set</string>
     <string name="auto_time">FreeTime:</string>
@@ -390,7 +391,7 @@
     <string name="cus_gb_start">Start(word):</string>
     <string name="cus_lock_area">LockArea:</string>
 
-    <string name="chinese">Chinese</string>
+    <string name="arabic" translatable="false">العربية</string>
     <string name="english">English</string>
     <string name="upgrade_complete">Upgrade is complete</string>
     <string name="notSerial">Cannot find serial port</string>
@@ -414,7 +415,6 @@
     <string name="calibration_power">Power:</string>
 
     <string name="upgrade_permission">The permissions required to read the upgrade file</string>
-
     <string name="continue_as_admin">Administrator</string>
     <string name="continue_as_client">User</string>
     <string name="willcome">Welcome</string>
@@ -424,10 +424,26 @@
     <string name="pass_worde">passWord</string>
     <string name="program_jewellery">برنامج جرد الخازن الجوهرة</string>
     <string name="wrong_user_or_Pass">Incorrect username or password</string>
-    <string name="language">English</string>
     <string name="change_langue">change Language</string>
     <string name="not_connected">not connect</string>
-    <string name="arabic">العربية</string>
+
     <string name="connect_rfid_fail">connected failed with scanning device</string>
     <string name="connect_rfid_success"> connected with scanning device</string>
+    <string name="smart_scan">smart scan</string>
+    <string name="inventory_saed">warehouse inventory</string>
+    <string name="scan">scan</string>
+    <string name="setting">settings</string>
+    <string name="ip_config">ip config</string>
+    <string name="save">save</string>
+    <string name="languge_btn">العربية</string>
+    <string name="done">done</string>
+
+    <string name="done_scan">scaned : </string>
+    <string name="expected">expected : </string>
+    <string name="not_found">Not found : </string>
+    <string name="undefined">undefined : </string>
+    <string name="language">language</string>
+
+    <string name="pleas_select_language">select</string>
 </resources>
+
