--- a/app/src/main/res/values-ar/strings.xml
+++ b/app/src/main/res/values-ar/strings.xml
@@ -443,4 +443,5 @@
     <string name="language">اللغة</string>
 
     <string name="pleas_select_language">اختيار</string>
+    <string name="stons">الأحجار</string>
 </resources>
