--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -445,5 +445,6 @@
     <string name="language">language</string>
 
     <string name="pleas_select_language">select</string>
+    <string name="stons">الأحجار</string>
 </resources>
 
