--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -445,5 +445,11 @@
     <string name="language">language</string>
 
     <string name="pleas_select_language">select</string>
+    <string name="weights">الوزن (غرام)</string>
+    <string name="total">الاجمالي</string>
+    <string name="pure">الصافي</string>
+    <string name="stons">الأحجار</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
 
