--- a/app/src/main/res/values-ar/strings.xml
+++ b/app/src/main/res/values-ar/strings.xml
@@ -444,4 +444,5 @@
 
     <string name="pleas_select_language">اختيار</string>
     <string name="stons">الأحجار</string>
+    <string name="report">تقرير</string>
 </resources>
